2005-12-19  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mktmpl.in: Use \w+: instead of \S+: when
	matching parameter names, so that @Deprecated:2.10:
	works in template files like in source code comments.

	* gtkdoc-mkdb.in: Add a missing "and" to the versioned
	deprecation note.

2005-12-09  Stefan Kost  <ensonic@users.sf.net>

	* devhelp.xsl:
	  try more to downgrade devhelp for old file format

2005-12-09  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  add devhelp2 files
	* autogen.sh:
	  create a autoregen.sh
	* devhelp.xsl:
	* devhelp2.xsl:
	* gtk-doc.xsl:
	  generate two separate versions
	* gtkdoc-mkdb.in:
	  fix parsing const after type (#322556)
	* gtkdoc-mktmpl.in:
	  fix parseing multiline macro heads (#320588)
	* gtkdoc-scangobj.in:
	  allow additional root types (#323581)

2005-12-05  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (OutputFunction): Allow parameters to be declared
	volatile (this happens in GLib nowadays)

2005-10-11  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  remove left-over debug-print

2005-10-10  Stefan Kost  <ensonic@users.sf.net>

	* devhelp.xsl:
	* gtkdoc-mkdb.in:
	  enhance gtkdoc devhelp output (#318129)

2005-10-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
          revert exchanging &nbsp; with &#160;

2005-10-04  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scanobj.in: patch from Andrae Steiner to add missing ';'
	(#317938)

2005-09-29  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
          additionally point people to the gnome-wiki

	* gtkdoc-mkdb.in:
          don't warn on macros with return docs (#314267)

2005-09-28 Matthias Clasen <mclasen@redhat.com>

	Show signal flags:  (#316789)

	* gtkdoc-scangobj.in: Emit flags for signals
	as <FLAGS> element in $MODULE.signals

	* gtkdoc-mkdb.in: Emit signal flags similar
	to property flags.

	* gtkdoc-mktmpl.in: Handle <FLAGS> here, too.
